--- a/package.json
+++ b/package.json
@@ -10,26 +10,18 @@
   "license": "Apache-2.0",
   "keywords": [
     "AWS",
-    "S3",
-    "S3 Explorer",
-    "S3 Object Explorer"
+    "EIP",
+    "Config",
+    "Route53"
   ],
-  "main": "src/openapi-explorer.js",
   "files": [
     "src",
     "dist"
   ],
   "mode": "production",
   "dependencies": {
-    "@suadelabs/vue3-multiselect": "^1.0.2",
     "aws-sdk": "^2.981.0",
-    "dragster": "^0.1.3",
-    "dropzone": "^5.9.2",
-    "file-saver": "^2.0.5",
-    "luxon": "^2.0.2",
-    "vue": "^3.0.5",
-    "vue-multiselect": "^2.1.6",
-    "vue3-clipboard": "^1.0.0"
+    "luxon": "^2.0.2"
   },
   "scripts": {
     "lint": "eslint --ext .js src make.js",
@@ -38,8 +30,6 @@
     "test": "babel src -d lib && mocha -r esm tests/*.test.js"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.0.5",
     "aws-architect": "^6.6.4",
     "axios": "^0.21.1",
     "ci-build-tools": "^1.0.13",
@@ -54,9 +44,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.17.0",
     "fs-extra": "^8.1.0",
-    "glob": "^7.1.6",
-    "sass": "^1.38.2",
-    "vite": "^2.4.4"
+    "glob": "^7.1.6"
   },
   "engines": {
     "node": ">=12"
