--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint --ext .js src make.js",
     "setup": "node make.js setup",
     "after_build": "node make.js after_build",
-    "test": "babel src -d lib && mocha -r esm tests/*.test.js"
+    "test.bak": "babel src -d lib && mocha -r esm tests/*.test.js"
   },
   "devDependencies": {
     "aws-architect": "^6.6.4",
