--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ on:
     - master
     - 'release/**'
 
+permissions:
+  contents: write
+  pull-requests: read
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -22,16 +27,22 @@ jobs:
     - name: Run Setup
       run: yarn setup
 
+    - name: Configure AWS Credentials
+      if: github.repository_owner == 'Rhosys' && github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
+      uses: aws-actions/configure-aws-credentials@036a4a1ddf2c0e7a782dca6e083c6c53e5d90321
+      with:
+        aws-region: eu-west-1
+        role-duration-seconds: 3600
+        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubRunnerAssumedRole
+        role-session-name: GitHubRunner-${{ github.repository_owner }}-EIP-Config-${{ github.run_number }}
     - name: After build
-      if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
+      if: github.repository_owner == 'Rhosys' && github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: yarn after_build
     - name: Create Github Release and Tag
-      if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
+      if: github.repository_owner == 'Rhosys' && github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master'
       run: |
         git tag ${GITHUB_REF/refs\/heads\/release\//}.$GITHUB_RUN_NUMBER
         git push origin ${GITHUB_REF/refs\/heads\/release\//}.$GITHUB_RUN_NUMBER
